# hal.ai

./: Cargo.toml  README.md
src/: client.rs  common.rs  lib.rs  main.rs  models.rs  server.rs  utils.rs
src/models/: common.rs  mistral.rs
